Facet removal and count alignment fix.

--- a/themes/bootprint/css/bootprint-custom.css
+++ b/themes/bootprint/css/bootprint-custom.css
@@ -91,7 +91,7 @@ select, .btn:not(.btn-link){vertical-align:top}
 .sidebar .nav-list li a {margin:0;padding:3px}
 .sidebar .nav-list li a:hover {background:none}
 .sidebar .nav-list li span.main {width:auto}
-.sidebar .nav-list li span.pull-right {display:block;text-align:center;width:16px}
+.sidebar .nav-list li span.pull-right {display:block;text-align:center;min-width:16px}
 .sidebar .nav-list li.active a i.icon-remove {background:url('../images/icons/delete.png')}
 .sidebar .nav-list li.active a {background:#FFA500;text-shadow:none}
 .sidebar .nav-list li.active a:hover {background:#FFA500}
